tests/baselines/reference/parserLabeledStatement1.d.errors.txt
==== tests/cases/compiler/parserLabeledStatement1.d.ts (2 errors) ====
    foo:
    ~~~
!!! parserLabeledStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
      bar();
      ~~~
!!! parserLabeledStatement1.d.ts(2,3): error TS2095: Cannot find name 'bar'.